--- a/document/BackMatter/Recomendations.tex
+++ b/document/BackMatter/Recomendations.tex
@@ -10,7 +10,7 @@ También aumentar el número de plantillas para distintos tipos de expresiones,
 contribuiría a aumentar la variabilidad de los modelos.
 
 Se recomienda evaluar la adaptabilidad de los esquemas propuestos a una diversidad de fuentes proveedoras de datos para comprobar su 
-factibilidad en la práctica. Asimismo se recomienda buscar una propuesta para la generación automática de las tuplas de 
+factibilidad en la práctica. Asimismo, se recomienda buscar una propuesta para la generación automática de las tuplas de 
 conocimiento a partir de un esquema específico. 
  
 
