--- a/document/FrontMatter/SupervisorOpinion.tex
+++ b/document/FrontMatter/SupervisorOpinion.tex
@@ -1,3 +1,29 @@
 \begin{opinion}
-    Opiniones de los tutores
+    
+    El estudiante Abel Molina Sánchez desarrolló satisfactoriamente el trabajo de diploma 
+titulado “Generación automática de reportes textuales sobre enfrentamientos deportivos”. En este 
+trabajo el estudiante propuso el diseño de un sistema para la generación automática de notas 
+textuales sobre eventos deportivos. La idea general seguida fue la definición de un esquema general, 
+o meta-esquema, de tuplas (4-tuplas) de conocimiento sobre las cuales se pudieran implementar, 
+siguiendo una metodología genérica, funciones de realización particulares. 
+    
+    Para validar esta propuesta, el estudiante propuso esquemas particulares para dos deportes con 
+características diferentes: el fútbol y el boxeo. Además, propuso un conjunto de funciones de 
+realización lingüística para cada caso. Con ello pudo mostrar como se generaban distintos reportes 
+para bases de conocimiento diferentes y así mostrar la validez y factibilidad de la propuesta.
+    
+    Para poder afrontar el trabajo, el estudiante tuvo que revisar literatura científica relacionada 
+con la temática así como soluciones existentes y bibliotecas de software que pueden ser apropiadas 
+para su utilización. Todo ello con sentido crítico, determinando las mejores aproximaciones y también 
+las dificultades que presentan.
+    
+    Todo el trabajo fue realizado por el estudiante con una elevada constancia, capacidad de trabajo y 
+habilidades, tanto de gestión, como de desarrollo y de investigación. 
+    
+    Por estas razones pedimos que le sea otorgada al estudiante Abel Molina Sánchez la máxima calificación 
+y, de esta manera, pueda obtener el título de Licenciado en Ciencia de la Computación.
+    
+    
+Dr. Yudivián Almeida Cruz
+
 \end{opinion}
