--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -44,7 +44,7 @@ de un sistema de GLN:
 \end{itemize}
 
 
-Estas tareas naturalmente se puden dividir entre las que envuelven el proceso de elegir qué decir y de qué forma (planificación del contenido) 
+Estas tareas naturalmente se pueden dividir entre las que envuelven el proceso de elegir qué decir y de qué forma (planificación del contenido) 
 a partir de los datos, y las que tienen un carácter más orientado al proceso lingüístico de elegir los términos adecuados para la expresión 
 en sí (realización) \brackcite{Gatt2018SurveyOT}. Cada una de estas tareas, aunque no presentes en su conjunto en todos los sistemas, responden a distintos 
 objetivos dentro de los mismos y existen distintas técnicas para cada una de ellas en la literatura.
@@ -56,7 +56,7 @@ estar representada en el texto final \brackcite{reiter_dale_2000}. Los sistemas 
 o seleccionar un subconjunto de los mismos \brackcite{reiter_dale_2000}.
 
     El reconocimiento de patrones es una de las t\'ecnicas utilizadas con este fin.  SumTime-Turbine \brackcite{Yu2006ChoosingTC} es un ejemplo de sistema funcional para crear
- informes sobre un mecanismo de turbinas de gas. En un contexto donde la cantidad de datos en muy grande y en su mayoría irrelevante, 
+ informes sobre un mecanismo de turbinas de gas. En un contexto donde la cantidad de datos es muy grande y en su mayoría irrelevante, 
  los autores con ayuda de los expertos del dominio crean un modelo que permite reconocer patrones en los datos así como luego, utilizando una base de datos de patrones 
 antiguos determinar los patrones relevantes a ser expresados en el informe. 
 
@@ -284,7 +284,7 @@ hubo empresas que detectaron en la generación de texto un nicho de mercado no c
 de plantillas basadas en reglas que describen los datos que se desea tratar. A partir de las mismas, y en dependencia de su sofisticación los textos generados pueden llegar a ser 
 indistinguibles de los textos redactados por un humano. Precisamente en colaboración con \textit{Automated Insights}, la gran corporación de prensa \textit{Associated Press (AP)} generó
 las vistas previas de los partidos de una temporada regular de baloncesto, liberando a los periodistas de este trabajo. A su vez, \textit{Yahoo!} utiliza esta tecnología para crear informes 
-de jugadores y resúmenes de partidos de fútbol del juego \textit{Fotball Manager} que es de gran interés para sus usuarios. Otro caso de uso dentro de la automatización de contenido en la prensa lo encontramos en
+de jugadores y resúmenes de partidos de fútbol del juego \textit{Fantasy Football} que es de gran interés para sus usuarios. Otro caso de uso dentro de la automatización de contenido en la prensa lo encontramos en
 \textit{PostData\footnote[3]{http://www.postdata.club/index.html}}, un sitio de periodismo 
 de datos cubano, donde utilizan un modelo propio, \textit{ArmandBot} \brackcite{balboa2020}, para generar reportes sobre las actuaciones de los peloteros cubanos en grandes ligas.
 
