--- a/document/MainMatter/Validation.tex
+++ b/document/MainMatter/Validation.tex
@@ -165,7 +165,7 @@ a su clasificación. En la figura \ref{fig_clasificacioneventos} se muestran las
 
     \begin{figure}[!]
         \begin{center}
-            \includegraphics[scale=0.9]{Graphics/clasificacioneventosrel.png}
+            \includegraphics[scale=0.9]{Graphics/eventosrelevantesOK3.png}
         \end{center}
         \caption{Clasificación de los eventos relevantes}
         \label{fig_clasificacioneventos}
@@ -211,7 +211,7 @@ las acciones. Así mismo, acciones negativas se penalizan con evaluaciones negat
 %jugadores de corte defensivo (portero y defensas) también se les agrega un punto si su equipo no recibe goles. Los jugadores del equipo que resulta derrotado ven 
 %reducido sus puntos en un diez por ciento. El jugador con mayor puntuación del partido se considera el hombre del partido.
 
-
+\pagebreak
 
 \subsubsection{Realización}
 
@@ -236,7 +236,7 @@ las acciones. Así mismo, acciones negativas se penalizan con evaluaciones negat
 plantillas que lexicalizan las diferentes expresiones y a partir de ellas se conforman estructuras en forma de oraciones.
 \\
 
-    \textbf{Presentación}\\
+    \textbf{Plantillas de Presentación}\\
 
     En el texto de presentación se busca expresar la información concerniente al resultado del partido, su circunstancia, así como el lugar donde se 
 realiza este. Se plantea en forma de oración que sigue una de estas estructuras de forma aleatoria:
@@ -273,7 +273,7 @@ Las \textit{plantilla de resultado} se construyeron en distintos grupos en depen
         \end{itemize}
 
 
-\textbf{Eventos principales}\\
+\textbf{Plantillas de Eventos principales}\\
 
 
     Las expulsiones se expresan a través de un de las siguientes estructuras:
@@ -327,7 +327,7 @@ Las \textit{plantilla de resultado} se construyeron en distintos grupos en depen
         \item \textit{autor\_del\_gol con un buen disparo a pase de $<$ asistente $>$, disminuyó la distancia en el marcador a los $<$ minuto $>$ minutos} 
     \end{itemize}
 
-\textbf{Jugador destacado}\\
+\textbf{Plantillas de Jugador destacado}\\
 
     La estructura de la oración del jugador más valioso utiliza: \textit{plantilla más valioso}, \textit{plantilla estadísticas} junto con el \textit{nombre}, 
 \textit{equipo} y la expresión de la  \textit{posición} del jugador.
@@ -470,7 +470,7 @@ en el género correspondiente (ej. boxeador y boxeadora, el púgil y la púgil).
 
     Como se hizo con el modelo anterior, se realiza una breve descripción de la formación de las plantillas para la expresión de la información en las distintas oraciones.\\
 
-    \textbf{Presentación}\\
+    \textbf{Plantillas de Presentación}\\
 
     Para la presentación se utilizan las plantillas siguientes: \textit{plantilla de categoría}, \textit{plantilla de sede}, 
 \textit{plantilla de resultado}, \textit{plantilla de tipo definición}, \textit{plantilla de tipo de golpeo}. La forma de realizar cada tipo de resultado es diferente, porque, 
@@ -507,7 +507,7 @@ plantillas especiales con el fin de variar la forma de las oraciones. Estas fuer
     \end{itemize}
 
 
-    \textbf{Votaciones de los jueces}\\
+    \textbf{Plantillas de Votaciones de los jueces}\\
 
     La expresión de la votación de los jueces sigue una construcción más simple basada en solo dos grupos de plantillas. 
 Las \textit{plantillas de votación} y las \textit{plantillas de complemento de votación}.
@@ -525,7 +525,7 @@ Las \textit{plantillas de votación} y las \textit{plantillas de complemento de 
 
 
 
-    \textbf{Derribos}\\
+    \textbf{Plantillas de Derribos}\\
 
     Para expresar un derribo simple que ocurre en un determinado asalto, se utiliza: \textit{plantilla de derribo}, 
     \textit{plantilla de asalto} y \textit{plantilla de golpeo}. Se hacen variaciones sobre la siguiente estructura:
