--- a/document/MainMatter/Proposal.tex
+++ b/document/MainMatter/Proposal.tex
@@ -127,7 +127,7 @@ generar textos que describan el enfrentamiento.
     Primero, es necesario tener en cuenta que el meta esquema planteado anteriormente busca la abstracción de conceptos comunes. Estos 
 conceptos necesitan, al menos los referentes a los roles, eventos y resultados, ser llevados a su expresión específica dentro de una modalidad 
 deportiva. A su vez, se deben diferenciar los conceptos de: capacidad de representación y obligación de representación. Que el esquema permita definir 
-un tipo de información determinada no significa que todos los deportes expresen necesariamente ese concepto. Además es posible que se conciban distintos 
+un tipo de información determinada no significa que todos los deportes expresen necesariamente ese concepto. Además, es posible que se conciban distintos 
 esquemas específicos para un mismo deporte. Esto depende de cómo cada modelo sea representado.
 
     La representación de un deporte en un esquema específico a partir del esquema general propuesto necesita del análisis de sus características. 
