--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -59,9 +59,13 @@
 \advisor{\\\vspace{0.25cm}Dr. Yudivián Almeida Cruz\\\vspace{0.2cm}Lic. Manuel Santiago Fernández Arias}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
-\date{Noviembre 2022\\\vspace{0.25cm}\href{https://github.com/abel1927/Thesis}{github.com/abel1927/Thesis}}
+\date{Noviembre 2022}
+%\vspace{0.25cm}
+%\href{https://github.com/abel1927/Thesis}{github.com/abel1927/Thesis}}
 \logo{Graphics/uhlogo}
 \makenomenclature
+
+
 
 \renewcommand{\vec}[1]{\boldsymbol{#1}}
 \newcommand{\diff}[1]{\ensuremath{\mathrm{d}#1}}
@@ -84,6 +88,12 @@
 
 \frontmatter
 \maketitle
+\begin{figure}[!htb]
+\begin{center}
+    \includegraphics[scale=0.3]{Graphics/qrtesis.png}
+\end{center}
+\end{figure} 
+
 
 \include{FrontMatter/Dedication}
 \include{FrontMatter/Thanks}
