add: last paragraph

--- a/document/MainMatter/Implementation.tex
+++ b/document/MainMatter/Implementation.tex
@@ -221,7 +221,8 @@ figura \ref{fig_entradafutbol}.
 
 El modelo desarrollado es capaz de generar textos que siguen la estructura elegida y cumple con el objetivo de 
 crear un reporte de un partido de fútbol partiendo de la base de ser independiente de la fuente de datos utilizada. 
-\\
+
+\pagebreak
 
     \textbf{Boxeo}\\
 
@@ -251,3 +252,6 @@ visionado de un extracto de la pelea en \textit{youtube.com}. Un ejemplo de la e
         de peso medio. Con un gancho Brian Mendoza obtuvo la victoria al noquear a Jeison Rosario en el quinto asalto.
         Mendoza puso en conteo de protección a Rosario con un inesperado puñetazo de derecha en el segundo asalto.}
     \end{itemize}
+
+El modelo implementado fue capaz de generar textos que describían el combate de boxeo definido por los datos de entrada independiente de la fuente de obtención de los mismos. 
+Mostró variabilidad, generando diferentes textos ante la misma entrada de datos. El texto generado respetó la estructura informativa definida.
