--- a/document/FrontMatter/SupervisorOpinion.tex
+++ b/document/FrontMatter/SupervisorOpinion.tex
@@ -23,7 +23,15 @@ habilidades, tanto de gestión, como de desarrollo y de investigación.
     Por estas razones pedimos que le sea otorgada al estudiante Abel Molina Sánchez la máxima calificación 
 y, de esta manera, pueda obtener el título de Licenciado en Ciencia de la Computación.
     
-    
-Dr. Yudivián Almeida Cruz
+
+\vspace{1cm}
+\begin{flushright}
+    \emph{Dr. Yudivián Almeida Cruz} \\
+    %Facultad de Matemática y Computación \\
+    %Universidad de La Habana    
+\end{flushright}   
+
+
+%Dr. Yudivián Almeida Cruz
 
 \end{opinion}
