--- a/document/FrontMatter/Thanks.tex
+++ b/document/FrontMatter/Thanks.tex
@@ -1,6 +1,6 @@
 \begin{acknowledgements}
-    En primer lugar quiero agradecer a todos los profesores de mi vida estudiantil. Especial agradecimiento a mis 
-tutores  Yudivián Almeida y Manuel Santiago por su guía y su disposición en todo momento.
+    En primer lugar quiero agradecer a todos los profesores de mi vida estudiantil. Especial agradecimiento a mi 
+tutor Yudivián Almeida por su guía y su disposición en todo momento.
 
     Quiero agradecer a mis padres, que han sido un ancla en todos los momentos de dificultad. Quién le iba a decir a 
 una bioquímica y a un telecomunicador que iban a terminar revisando trabajos de cibernética, aunque solo sea la 
