--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -56,7 +56,7 @@
 
 \title{Generación automática de reportes textuales sobre enfrentamientos deportivos}
 \author{\\\vspace{0.25cm}Abel Molina Sánchez}
-\advisor{\\\vspace{0.25cm}Dr. Yudivián Almeida Cruz\\\vspace{0.2cm}Lic. Manuel Santiago Fernández Arias}
+\advisor{\\\vspace{0.25cm}Dr. Yudivián Almeida Cruz}%\vspace{0.2cm}Lic. Manuel Santiago Fernández Arias}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
 \date{Noviembre 2022}
